--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -6,13 +6,15 @@ summary: Windows Unified Host Utilities includes an installation program that se
 ---
 
 = Windows Unified Host Utilities 7.1
+:toc: macro
 :hardbreaks:
+:toclevels: 1
 :nofooter:
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
 
-
+[.lead]
 == What Windows Host Utilities is
 
 Windows Unified Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
