--- a/hu_citrix_8x.adoc
+++ b/hu_citrix_8x.adoc
@@ -74,8 +74,6 @@ Main PID:  3789 (multipathd)
 
 There is no requirement to append content to the `/etc/multipath.conf` file, unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults. You can add the following syntax to the multipath.conf file to exclude the unwanted devices.
 
-NOTE: Replace the *<DevID>* with the WWID string of the device you want to exclude.  Use the following command to determine the WWID:
-
 ----
 # cat /etc/multipath.conf
 blacklist {
@@ -86,9 +84,11 @@ blacklist {
 }
 ----
 
+NOTE: Replace the *<DevID>* with the WWID string of the device you want to exclude.
+
 .Example
 
-In this example for Citrix Hypervisor 8.x, sda is the local SCSI disk that we need to the blacklist.
+In this example for Citrix Hypervisor 8.x, `sda` is the local SCSI disk that we need to the blacklist.
 
 . Run the following command to determine the WWID:
 +
