added changes from SMEs

--- a/hu_citrix_8x.adoc
+++ b/hu_citrix_8x.adoc
@@ -16,7 +16,7 @@ summary: Describes how to use Citrix Hypervisor 8.x with ONTAP
 
 == Introduction
 
-This document provides guidance on ONTAP SAN host configuration settings for Citrix Hypervisor 8.0, 8.1, 8.2 OS releases with FC, FCoE and iSCSi protocols.
+This document provides guidance on ONTAP SAN host configuration settings for Citrix Hypervisor 8 series OS releases with FC, FCoE and iSCSi protocols.
 
 == SAN Booting
 
