--- a/hu_veritas_74.adoc
+++ b/hu_veritas_74.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: hu_veritas_74.html
-keywords: host utilities, veritas, infoscale, 7.4.1, netapp, ontap
+keywords: host utilities, veritas, infoscale, 7.x, netapp, ontap
 summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
 
-= Using Veritas Infoscale 7.4.1 for Linux with NetApp ONTAP
+= Using Veritas Infoscale 7.x for Linux with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,7 +15,7 @@ summary: Describes how to use Oracle Linux 6.4 with ONTAP
 :imagesdir: ./media/
 
 == Introduction
-This document provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7.4.1 release for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
+This document provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7 series release for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
 
 == Installing the Linux Unified Host Utilities
 
@@ -54,6 +54,8 @@ eanbled     up      active/non-optimized sdas   13:0:1:0   lif_9      66:192
 If you decide to use SAN booting, it must be supported by your configuration. You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 Refer to Veritas Support Portal (Product Matrix, Platform Lookup, HCL Matrix) to verify SAN Boot configuration supportability and known caveats.
+
+.Steps
 
 include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
@@ -199,7 +201,7 @@ For Red Hat Enterprise Linux 7 and 8 series, you must configure `udev rport` val
 
 ----
 # cat /etc/udev/rules.d/40-rport.rules
-KERNEL=="rport-*", SUBSYSTEM=="fc_remote_ports", ACTION=="add", RUN+=/bin/sh -c 'echo 20 > /sys/class/fc_remote_ports/%k/fast_io_fail_tmp;echo 864000 >/sys/class/fc_remote_ports/%k/dev_loss_tmo'"
+KERNEL=="rport-*", SUBSYSTEM=="fc_remote_ports", ACTION=="add", RUN+=/bin/sh -c 'echo 20 > /sys/class/fc_remote_ports/%k/fast_io_fail_tmo;echo 864000 >/sys/class/fc_remote_ports/%k/dev_loss_tmo'"
 ----
 
 NOTE: For all other settings specific to Veritas, refer to the standard Veritas Infoscale product documentation.
