--- a/hu_veritas_6x.adoc
+++ b/hu_veritas_6x.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
-permalink: hu_veritas_73.html
-keywords: host utilities, veritas, infoscale, 7.3. 7.3.1, netapp, ontap
-summary: Describes how to use Veritas Infoscale 7.3 for Linux with ONTAP
+permalink: hu_veritas_74.html
+keywords: host utilities, veritas, infoscale, 6.x, netapp, ontap
+summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
 
-= Using Veritas Infoscale 7.3 for Linux with NetApp ONTAP
+= Using Veritas Infoscale 6 for Linux with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,7 +15,7 @@ summary: Describes how to use Veritas Infoscale 7.3 for Linux with ONTAP
 :imagesdir: ./media/
 
 == Introduction
-This document provides guidance on ONTAP SAN host configuration settings for Veritas Infoscale 7.3, 7.3.1 releases for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
+This document provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 6 series release for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
 
 == Installing the Linux Unified Host Utilities
 
@@ -54,6 +54,8 @@ eanbled     up      active/non-optimized sdas   13:0:1:0   lif_9      66:192
 If you decide to use SAN booting, it must be supported by your configuration. You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 Refer to Veritas Support Portal (Product Matrix, Platform Lookup, HCL Matrix) to verify SAN Boot configuration supportability and known caveats.
+
+.Steps
 
 include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
