updates to veritas docs

--- a/hu_veritas_6x.adoc
+++ b/hu_veritas_6x.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: hu_veritas_74.html
-keywords: host utilities, veritas, infoscale, 6.x, netapp, ontap
-summary: Describes how to use Oracle Linux 6.4 with ONTAP
+permalink: hu_veritas_6x.html
+keywords: host utilities, veritas, infoscale, 6.x, netapp, ontap, san, lun, multipathing, iscsi
+summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 6 series release
 ---
 
 = Using Veritas Infoscale 6 for Linux with NetApp ONTAP
@@ -51,6 +51,7 @@ eanbled     up      active/non-optimized sdas   13:0:1:0   lif_9      66:192
 == SAN Booting
 
 .Before you begin
+
 If you decide to use SAN booting, it must be supported by your configuration. You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 Refer to Veritas Support Portal (Product Matrix, Platform Lookup, HCL Matrix) to verify SAN Boot configuration supportability and known caveats.
