--- a/hu_veritas_74.adoc
+++ b/hu_veritas_74.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, veritas, infoscale, 7.x, netapp, ontap
 summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
 
-= Using Veritas Infoscale 7.x for Linux with NetApp ONTAP
+= Using Veritas Infoscale 7 for Linux with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
