updates to sidebar

--- a/hu_veritas_74.adoc
+++ b/hu_veritas_74.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: hu_veritas_74.html
-keywords: host utilities, veritas, infoscale, 7.x, netapp, ontap
-summary: Describes how to use Oracle Linux 6.4 with ONTAP
+permalink: hu_veritas_7.html
+keywords: host utilities, veritas, infoscale, 7.x, netapp, ontap, sanhost, iscsi, red, hat linux, oracle, linux
+summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7 series release
 ---
 
 = Using Veritas Infoscale 7 for Linux with NetApp ONTAP
