--- a/hu_veritas_6x.adoc
+++ b/hu_veritas_6x.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_veritas_6x.html
+permalink: hu_veritas_6.html
 keywords: host utilities, veritas, infoscale, 6.x, netapp, ontap, san, lun, multipathing, iscsi
 summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 6 series release
 ---
