minor updates Veritas

--- a/hu_veritas_74.adoc
+++ b/hu_veritas_74.adoc
@@ -15,7 +15,7 @@ summary: Provides guidance on ONTAP SAN host configuration settings for the Veri
 :imagesdir: ./media/
 
 == Introduction
-This document provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7 series release for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
+This document provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale storage foundation 7 series release for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
 
 == Installing the Linux Unified Host Utilities
 
