Minor code update as per SME instruction

--- a/hu_veritas_74.adoc
+++ b/hu_veritas_74.adoc
@@ -97,7 +97,7 @@ asl        = libvxnetapp.so
 libvxnetapp.so              vm-7.4-rev-1    6.1
 
 # rpm -qa |grep VRTSaslapm
-VRTSaslapm-7.4.2.0000-RHEL8.X86_64
+VRTSaslapm-x.x.x.0000-RHEL8.X86_64
 ----
 
 ----
