--- a/hu_veritas_6x.adoc
+++ b/hu_veritas_6x.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, veritas, infoscale, 6.x, netapp, ontap, san, lun, mult
 summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 6 series release
 ---
 
-= Using Veritas Storage Foundation 6 for Linux with NetApp ONTAP
+= Using Veritas Storage Foundation 6.x for Linux with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -98,7 +98,7 @@ asl        = libvxnetapp.so
 libvxnetapp.so              vm-7.4-rev-1    6.1
 
 # rpm -qa |grep VRTSaslapm
-VRTSaslapm-7.4.2.0000-RHEL8.X86_64
+VRTSaslapm-x.x.x.0000-RHEL8.X86_64
 ----
 
 ----
