--- a/hu_veritas_7x.adoc
+++ b/hu_veritas_7x.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: hu_veritas_7x.html
-keywords: host utilities, veritas, infoscale, 7.x, netapp, ontap, sanhost, iscsi, red, hat linux, oracle, linux
+keywords: host utilities, veritas, infoscale, 7, netapp, ontap, sanhost, iscsi, red, hat linux, oracle, linux
 summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7 series release
 ---
 
-= Using Veritas Infoscale 7.x for Linux with NetApp ONTAP
+= Using Veritas Infoscale 7 for Linux with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
