--- a/hu_veritas_7x.adoc
+++ b/hu_veritas_7x.adoc
@@ -45,7 +45,7 @@ state       state   type     node    id:lun    LIF                   minor
 enabled     up      active/non-optimized sdea   14:0:1:0   lif_10    128:32
 enabled (a) up      active/optimized     sdcj   14:0:0:0   lif_2      69:112
 enabled (a) up      active/optimized     sdb    13:0:0:0   lif_1       8:16
-eanbled     up      active/non-optimized sdas   13:0:1:0   lif_9      66:192
+enabled     up      active/non-optimized sdas   13:0:1:0   lif_9      66:192
 ----
 
 == SAN Booting
