--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_wuhu_71.html
-keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity
+keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host
 summary: Windows Unified Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
 
