updates to rhel doc

--- a/_include/hu/reuse_hu_installing_luhu_without32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_without32.adoc
@@ -6,6 +6,8 @@ Installing the Linux Unified Host Utilities is strongly recommended, but not man
 
 If you have a version of Linux Unified Host Utilities currently installed you should upgrade it or, you should remove it and use the following steps to install the latest version.
 
+.Steps
+
 .	Download the 64-bit Linux Unified Host Utilities software package from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^] to your host.
 .	Use the following command to install the software package:
 +
